<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/smile_background" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/intro_all_margin_bottom"
        android:layout_marginLeft="@dimen/intro_all_margin_left"
        android:layout_marginRight="@dimen/intro_all_margin_right"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/intro_header_title_text_margin_bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_intro_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:text="@string/smile_intro_title"
                android:textColor="@color/c1"
                android:textSize="@dimen/intro_header_title_text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_intro_description_line1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:text="@string/smile_intro_description_line1"
            android:textColor="@color/c1"
            android:textSize="@dimen/intro_header_description_text_size" />

        <TextView
            android:id="@+id/tv_intro_description_line2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:text="@string/smile_intro_description_line2"
            android:textColor="@color/c1"
            android:textSize="@dimen/intro_header_description_text_size" />

        <TextView
            android:id="@+id/tv_intro_description_line3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:text="@string/smile_intro_description_line3"
            android:textColor="@color/c1"
            android:textSize="@dimen/intro_header_description_text_size" />

        <TextView
            android:id="@+id/tv_intro_description_line4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/intro_header_description_margin_bottom"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:text="@string/smile_intro_description_line4"
            android:textColor="@color/c1"
            android:textSize="@dimen/intro_header_description_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:minWidth="120dp"
                android:layout_height="@dimen/intro_button_height"
                android:background="@drawable/tvcamera_common_btn_selected"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="@dimen/intro_button_select_text_padding_left"
                android:paddingRight="@dimen/intro_button_select_text_padding_right"
                android:text="@string/start"
                android:textColor="@color/c1"
                android:textSize="@dimen/text_size_rec_item" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:minWidth="120dp"
                android:layout_height="@dimen/intro_button_height"
                android:background="@drawable/tvcamera_common_btn_selected"
                android:focusable="true"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:paddingLeft="@dimen/intro_button_select_text_padding_left"
                android:paddingRight="@dimen/intro_button_select_text_padding_right"
                android:text="@string/cancel"
                android:textColor="@color/c1"
                android:textSize="@dimen/text_size_rec_item" />

            <Button
                android:id="@+id/enter"
                android:layout_width="wrap_content"
                android:minWidth="120dp"
                android:layout_height="@dimen/intro_button_height"
                android:background="@drawable/tvcamera_common_btn_selected"
                android:focusable="true"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:paddingLeft="@dimen/intro_button_select_text_padding_left"
                android:paddingRight="@dimen/intro_button_select_text_padding_right"
                android:text="@string/enter_button"
                android:textColor="@color/c1"
                android:textSize="@dimen/text_size_rec_item" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>